// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic textarea validator acceptable 1`] = `
{
  "data": "acceptable",
  "success": true,
}
`;

exports[`generic textarea validator non required empty 1`] = `
{
  "data": undefined,
  "success": true,
}
`;

exports[`generic textarea validator required empty 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "generic": true,
      "i18n": "errors.generic.textarea.required"
    },
    "path": [],
    "message": "ARTMS required!"
  }
]],
  "success": false,
}
`;

exports[`generic textarea validator too big 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "min": 5,
      "max": 20,
      "count": 35,
      "generic": true,
      "i18n": "errors.generic.textarea.invalid_range"
    },
    "path": [],
    "message": "ARTMS 35 not between 5 20!"
  }
]],
  "success": false,
}
`;

exports[`generic textarea validator too small 1`] = `
{
  "error": [ZodError: [
  {
    "code": "custom",
    "params": {
      "min": 5,
      "max": 20,
      "count": 3,
      "generic": true,
      "i18n": "errors.generic.textarea.invalid_range"
    },
    "path": [],
    "message": "ARTMS 3 not between 5 20!"
  }
]],
  "success": false,
}
`;
